--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis">
-  <meta property="og:title" content="KINETIQA: Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis"/>
-  <meta property="og:description" content="KINETIQA introduces a novel temporal Transformer model for accurate and robust knee angle forecasting in exoskeleton applications."/>
+  <meta name="description" content="KINETIQA: A Transformer-based model for knee joint angle prediction in exoskeleton-based gait analysis.">
+  <meta property="og:title" content="KINETIQA: Joint Angle Prediction for Exoskeleton Gait Analysis"/>
+  <meta property="og:description" content="Accurate long-horizon knee joint forecasting with quality-driven attention and transformer-based temporal modeling."/>
   <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/"/>
   <meta property="og:image" content="static/images/banner.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
-  <meta name="twitter:title" content="KINETIQA: Joint Angle Forecasting for Exoskeletons">
-  <meta name="twitter:description" content="KINETIQA: A Transformer-based model for real-time knee joint angle prediction in exoskeleton-assisted rehabilitation.">
+  <meta name="twitter:title" content="KINETIQA: Joint Angle Prediction in Exoskeleton Gait Analysis">
+  <meta name="twitter:description" content="Transformer-based forecasting with enhanced temporal intelligence and robustness to noise.">
   <meta name="twitter:image" content="static/images/banner.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="KINETIQA, knee joint prediction, gait analysis, exoskeletons, transformers, biomechanics, real-time AI">
+  <meta name="keywords" content="KINETIQA, gait analysis, exoskeleton, knee joint prediction, transformers, biomechanics, deep learning">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KINETIQA: Joint Angle Forecasting for Exoskeletons</title>
+  <title>KINETIQA: Joint Angle Forecasting</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -31,176 +31,118 @@
   <script src="static/js/bulma-slider.min.js"></script>
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        tex2jax: {
-          inlineMath: [['$','$'], ['\\(','\\)']],
-          processEscapes: true
-        }
-      });
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
   </script>
   <script src="static/js/index.js"></script>
 </head>
 <body>
 
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-        <div class="columns is-centered">
+<section class="hero">
+  <div class="hero-body">
+    <div class="container is-max-desktop">
+      <div class="columns is-centered">
+        <div class="column has-text-centered">
+          <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
+            <span class="author-block"><a href="#" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
+            <span class="author-block">Wadha Al Shehhi</span>
+            <span class="author-block">Fatima Al Neyadi</span>
+            <span class="author-block">Ahmed Al Harbi</span>
+          </div>
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">Khalifa University, UAE<br>IEEE Access, 2025</span>
+            <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
+          </div>
           <div class="column has-text-centered">
-            <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
-            <div class="is-size-5 publication-authors">
-              <span class="author-block">
-                <a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
-              <span class="author-block">
-                <a href="https://www.linkedin.com/in/muhammad-irfan-123456789/" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
-              <span class="author-block">
-                <a href="https://www.linkedin.com/in/wadha-al-shehhi/" target="_blank">Wadha Al Shehhi</a>
-              </span>
-              <span class="author-block">
-                <a href="https://www.linkedin.com/in/fatima-al-neyadi/" target="_blank">Fatima Al Neyadi</a>
-              </span>
-              <span class="author-block">
-                <a href="https://www.linkedin.com/in/ahmed-al-harbi/" target="_blank">Ahmed Al Harbi</a>
-              </span>
-            </div>
-
-            <div class="is-size-5 publication-authors">
-              <span class="author-block">Khalifa University<br>IEEE Access, 2025</span>
-              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-            </div>
-
-            <div class="column has-text-centered">
-              <div class="publication-links">
-                <span class="link-block">
-                  <a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link ">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Paper</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link ">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Supplementary</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link ">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                    <span>Code</span>
-                  </a>
-                </span>
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link ">
-                    <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                    </span>
-                    <span>arXiv</span>
-                  </a>
-                </span>
-              </div>
+            <div class="publication-links">
+              <span class="link-block"><a href="https://arxiv.org/pdf/XXXX.XXXX.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span></a></span>
+              <span class="link-block"><a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span></a></span>
+              <span class="link-block"><a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link"><span class="icon"><i class="fab fa-github"></i></span><span>Code</span></a></span>
+              <span class="link-block"><a href="https://arxiv.org/abs/XXXX.XXXX" target="_blank" class="external-link"><span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span></a></span>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Teaser video-->
-  <section class="hero teaser">
-    <div class="container is-max-desktop">
-      <div class="hero-body">
-        <video poster="" id="tree" autoplay controls muted loop height="100%">
-          <source src="static/videos/banner_video.mp4" type="video/mp4">
-        </video>
-        <h2 class="subtitle has-text-centered">
-          Real-time knee joint angle prediction in exoskeleton-assisted gait analysis.
-        </h2>
-      </div>
-    </div>
-  </section>
-  <!-- End teaser video -->
-
-  <!-- Paper abstract -->
-  <section class="section hero is-light">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-3">Abstract</h2>
-          <div class="content has-text-justified">
-            <p>
-              We present <strong>KINETIQA</strong>, a Transformer-based model tailored for real-time knee joint angle prediction in exoskeleton-assisted rehabilitation. It integrates temporal convolutions, recursive feature elimination, and quality-driven attention to enhance long-horizon gait forecasting while maintaining computational efficiency. KINETIQA significantly outperforms baselines like Transformer, TempoNet, LSTM, and FocalGatedNet, achieving over 20% MAPE reduction and demonstrating resilience to various sensor noise types including Gaussian, uniform, and salt-and-pepper noise.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End paper abstract -->
-
-  <!-- Image carousel -->
-  <section class="hero is-small">
+<!-- Teaser Video -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
     <div class="hero-body">
-      <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item">
-            <img src="static/images/carousel1.jpg" alt="Performance Comparison Chart"/>
-            <h2 class="subtitle has-text-centered">
-              Performance Comparison Chart
-            </h2>
-          </div>
-          <div class="item">
-            <img src="static/images/carousel2.jpg" alt="Model Architecture Overview"/>
-            <h2 class="subtitle has-text-centered">
-              Model Architecture Overview
-            </h2>
-          </div>
-          <div class="item">
-            <img src="static/images/carousel3.jpg" alt="Prediction vs Ground Truth"/>
-            <h2 class="subtitle has-text-centered">
-              Prediction vs Ground Truth
-            </h2>
-          </div>
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <source src="static/videos/banner_video.mp4" type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Real-time exoskeleton control using robust knee angle forecasting.
+      </h2>
+    </div>
+  </div>
+</section>
+
+<!-- Abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            We introduce <strong>KINETIQA</strong>, a Transformer-based model tailored for real-time knee joint angle prediction in exoskeleton-assisted gait analysis. Leveraging recursive feature elimination, temporal convolutions, and quality-driven attention, KINETIQA delivers state-of-the-art accuracy while maintaining real-time inference capabilities. It surpasses models like Transformer, FocalGatedNet, TempoNet, and LSTM in long-horizon prediction and robustness to sensor noise (Gaussian, uniform, and salt-and-pepper). Experiments on clinical datasets demonstrate an average 20% MAPE reduction and high statistical significance across all noise types and time horizons.
+          </p>
         </div>
       </div>
     </div>
-  </section>
-  <!-- End image carousel -->
+  </div>
+</section>
 
-  <!-- BibTeX citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>@article{saoud2025kinetiqa,
+<!-- Image Carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item"><img src="static/images/architecture.png" alt="KINETIQA Model Architecture"/><h2 class="subtitle has-text-centered">KINETIQA Architecture</h2></div>
+        <div class="item"><img src="static/images/performance_chart.png" alt="Performance Chart"/><h2 class="subtitle has-text-centered">Performance Comparison</h2></div>
+        <div class="item"><img src="static/images/noise_robustness.png" alt="Noise Robustness"/><h2 class="subtitle has-text-centered">Robustness Under Noise</h2></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- BibTeX -->
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@article{saoud2025kinetiqa,
   title={KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis},
   author={Saad Saoud, Lyes and Irfan, Muhammad and Al Shehhi, Wadha and Al Neyadi, Fatima and Al Harbi, Ahmed},
   journal={IEEE Access},
   year={2025}
 }</code></pre>
-    </div>
-  </section>
-  <!-- End BibTeX citation -->
+  </div>
+</section>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="columns is-centered">
-        <div class="column is-8">
-          <div class="content">
-            <p>
-  This page was built using a modified version of the
-  <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">
-    Academic Project Page Template
-  </a>
-  by <a href="https://github.com/eliahuhorwitz" target="_blank">Eliahu Horwitz</a>,
-  extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>.
-  You are free to borrow and adapt the structure of this page; we kindly ask that you include attribution in the footer. <br>
-  This website is licensed under a
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
-    Creative Commons Attribution-ShareAlike 4.0 International License
-  </a>.
-</p>
+<!-- Footer -->
+<footer class="footer">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <div class="content">
+          <p>
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> by Eliahu Horwitz, modified by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. Licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+</body>
+</html>
