--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="KINETIQA: A Transformer-based model for knee joint angle prediction in exoskeleton-based gait analysis.">
-  <meta property="og:title" content="KINETIQA: Joint Angle Prediction for Exoskeleton Gait Analysis"/>
-  <meta property="og:description" content="Accurate long-horizon knee joint forecasting with quality-driven attention and transformer-based temporal modeling."/>
+  <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis">
+  <meta property="og:title" content="KINETIQA: Joint Angle Forecasting in Exoskeleton-based Gait Analysis"/>
+  <meta property="og:description" content="A Transformer-based model for precise, real-time knee joint angle prediction with high accuracy and robustness."/>
   <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/"/>
   <meta property="og:image" content="static/images/banner.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
-  <meta name="twitter:title" content="KINETIQA: Joint Angle Prediction in Exoskeleton Gait Analysis">
-  <meta name="twitter:description" content="Transformer-based forecasting with enhanced temporal intelligence and robustness to noise.">
+  <meta name="twitter:title" content="KINETIQA: Real-time Gait Analysis using Transformers">
+  <meta name="twitter:description" content="Explore KINETIQA, a novel model integrating Transformers and temporal attention for robust knee joint angle forecasting.">
   <meta name="twitter:image" content="static/images/banner.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="KINETIQA, gait analysis, exoskeleton, knee joint prediction, transformers, biomechanics, deep learning">
+  <meta name="keywords" content="KINETIQA, exoskeleton, gait analysis, joint angle prediction, Transformer, biomechanics">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KINETIQA: Joint Angle Forecasting</title>
+  <title>KINETIQA Project Page</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -31,12 +31,12 @@
   <script src="static/js/bulma-slider.min.js"></script>
   <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        processEscapes: true
-      }
-    });
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$','$'], ['\\(','\\)']],
+          processEscapes: true
+        }
+      });
   </script>
   <script src="static/js/index.js"></script>
 </head>
@@ -50,21 +50,18 @@
           <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
-            <span class="author-block"><a href="#" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
-            <span class="author-block">Wadha Al Shehhi</span>
-            <span class="author-block">Fatima Al Neyadi</span>
-            <span class="author-block">Ahmed Al Harbi</span>
+            <span class="author-block"><a href="https://www.linkedin.com/in/muhammad-irfan-123456789/" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
           </div>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Khalifa University, UAE<br>IEEE Access, 2025</span>
+            <span class="author-block">Khalifa University, ARIC, UAE<br>IEEE Access 2025</span>
             <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
           </div>
           <div class="column has-text-centered">
             <div class="publication-links">
-              <span class="link-block"><a href="https://arxiv.org/pdf/XXXX.XXXX.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span></a></span>
+              <span class="link-block"><a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span></a></span>
               <span class="link-block"><a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span></a></span>
               <span class="link-block"><a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link"><span class="icon"><i class="fab fa-github"></i></span><span>Code</span></a></span>
-              <span class="link-block"><a href="https://arxiv.org/abs/XXXX.XXXX" target="_blank" class="external-link"><span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span></a></span>
+              <span class="link-block"><a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link"><span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span></a></span>
             </div>
           </div>
         </div>
@@ -73,21 +70,6 @@
   </div>
 </section>
 
-<!-- Teaser Video -->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4" type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Real-time exoskeleton control using robust knee angle forecasting.
-      </h2>
-    </div>
-  </div>
-</section>
-
-<!-- Abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -95,7 +77,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We introduce <strong>KINETIQA</strong>, a Transformer-based model tailored for real-time knee joint angle prediction in exoskeleton-assisted gait analysis. Leveraging recursive feature elimination, temporal convolutions, and quality-driven attention, KINETIQA delivers state-of-the-art accuracy while maintaining real-time inference capabilities. It surpasses models like Transformer, FocalGatedNet, TempoNet, and LSTM in long-horizon prediction and robustness to sensor noise (Gaussian, uniform, and salt-and-pepper). Experiments on clinical datasets demonstrate an average 20% MAPE reduction and high statistical significance across all noise types and time horizons.
+            We introduce <strong>KINETIQA</strong>, a novel Transformer-based model for real-time knee joint angle prediction tailored for exoskeleton-assisted rehabilitation. KINETIQA integrates a Kinematic Integration Network with enhanced temporal intelligence and a quality-driven attention mechanism, combining Transformers, temporal convolutions, and recursive feature elimination to significantly improve prediction accuracy. Compared to state-of-the-art models, KINETIQA achieves up to 25% lower MAPE and maintains inference latency under 23 ms on an RTX 4090 GPU. With its strong performance under noisy sensor conditions and across multiple forecast horizons, KINETIQA demonstrates clinical-grade robustness and interpretability, paving the way for practical deployment in real-world gait rehabilitation and biomechanical monitoring scenarios.
           </p>
         </div>
       </div>
@@ -103,40 +85,29 @@
   </div>
 </section>
 
-<!-- Image Carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item"><img src="static/images/architecture.png" alt="KINETIQA Model Architecture"/><h2 class="subtitle has-text-centered">KINETIQA Architecture</h2></div>
-        <div class="item"><img src="static/images/performance_chart.png" alt="Performance Chart"/><h2 class="subtitle has-text-centered">Performance Comparison</h2></div>
-        <div class="item"><img src="static/images/noise_robustness.png" alt="Noise Robustness"/><h2 class="subtitle has-text-centered">Robustness Under Noise</h2></div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- BibTeX -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{saoud2025kinetiqa,
   title={KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis},
-  author={Saad Saoud, Lyes and Irfan, Muhammad and Al Shehhi, Wadha and Al Neyadi, Fatima and Al Harbi, Ahmed},
+  author={Saad Saoud, Lyes and Irfan, Muhammad},
   journal={IEEE Access},
   year={2025}
 }</code></pre>
   </div>
 </section>
 
-<!-- Footer -->
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> by Eliahu Horwitz, modified by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. Licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+            This page was built using a modified version of the
+            <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>,
+            extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. You may reuse this template with credit.
+            <br>This website is licensed under a
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
         </div>
       </div>
