--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis">
-  <meta property="og:title" content="KINETIQA: Joint Angle Forecasting in Exoskeleton-based Gait Analysis"/>
-  <meta property="og:description" content="A Transformer-based model for precise, real-time knee joint angle prediction with high accuracy and robustness."/>
+  <meta property="og:title" content="KINETIQA: Joint Angle Forecasting for Exoskeletons"/>
+  <meta property="og:description" content="Transformer-based model for accurate and robust knee joint angle prediction in real-time exoskeleton control."/>
   <meta property="og:url" content="https://lyessaadsaoud.github.io/KINETIQA/"/>
   <meta property="og:image" content="static/images/banner.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
-  <meta name="twitter:title" content="KINETIQA: Real-time Gait Analysis using Transformers">
-  <meta name="twitter:description" content="Explore KINETIQA, a novel model integrating Transformers and temporal attention for robust knee joint angle forecasting.">
+  <meta name="twitter:title" content="KINETIQA: Real-Time Knee Angle Prediction">
+  <meta name="twitter:description" content="KINETIQA combines Transformers, TCNs, and quality-driven attention for biomechanical forecasting.">
   <meta name="twitter:image" content="static/images/banner.png">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="KINETIQA, exoskeleton, gait analysis, joint angle prediction, Transformer, biomechanics">
+  <meta name="keywords" content="KINETIQA, exoskeleton, gait analysis, knee prediction, biomechanics, deep learning, transformers, IEEE Access">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>KINETIQA Project Page</title>
+  <title>KINETIQA: Precise Gait Forecasting</title>
+
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -24,20 +25,12 @@
   <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="static/css/index.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
   <script defer src="static/js/fontawesome.all.min.js"></script>
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
-  <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        tex2jax: {
-          inlineMath: [['$','$'], ['\\(','\\)']],
-          processEscapes: true
-        }
-      });
-  </script>
   <script src="static/js/index.js"></script>
 </head>
 <body>
@@ -50,26 +43,59 @@
           <h1 class="xtitle is-1 publication-title">KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block"><a href="https://www.linkedin.com/in/lyes-saad-saoud/" target="_blank">Lyes Saad Saoud</a><sup>*</sup></span>
-            <span class="author-block"><a href="https://www.linkedin.com/in/muhammad-irfan-123456789/" target="_blank">Muhammad Irfan</a><sup>*</sup></span>
+            <span class="author-block"><a href="https://www.linkedin.com/in/irfan-hussain/" target="_blank">Irfan Hussain</a><sup>*</sup></span>
           </div>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Khalifa University, ARIC, UAE<br>IEEE Access 2025</span>
+            <span class="author-block">Khalifa University, ARIC Center<br>IEEE Access, 2025</span>
             <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution</small></span>
           </div>
+
           <div class="column has-text-centered">
             <div class="publication-links">
-              <span class="link-block"><a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span></a></span>
-              <span class="link-block"><a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link"><span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span></a></span>
-              <span class="link-block"><a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link"><span class="icon"><i class="fab fa-github"></i></span><span>Code</span></a></span>
-              <span class="link-block"><a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link"><span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span></a></span>
+              <span class="link-block">
+                <a href="https://arxiv.org/pdf/XXXX.XXXXX.pdf" target="_blank" class="external-link">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Paper</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="static/pdfs/supplementary_material.pdf" target="_blank" class="external-link">
+                  <span class="icon"><i class="fas fa-file-pdf"></i></span><span>Supplementary</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="https://github.com/lyessaadsaoud/KINETIQA" target="_blank" class="external-link">
+                  <span class="icon"><i class="fab fa-github"></i></span><span>Code</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/XXXX.XXXXX" target="_blank" class="external-link">
+                  <span class="icon"><i class="ai ai-arxiv"></i></span><span>arXiv</span>
+                </a>
+              </span>
             </div>
           </div>
+
         </div>
       </div>
     </div>
   </div>
 </section>
 
+<!-- Teaser video -->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <source src="static/videos/banner_video.mp4" type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+        Real-time knee joint angle prediction for exoskeleton-based gait rehabilitation.
+      </h2>
+    </div>
+  </div>
+</section>
+
+<!-- Abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -77,7 +103,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We introduce <strong>KINETIQA</strong>, a novel Transformer-based model for real-time knee joint angle prediction tailored for exoskeleton-assisted rehabilitation. KINETIQA integrates a Kinematic Integration Network with enhanced temporal intelligence and a quality-driven attention mechanism, combining Transformers, temporal convolutions, and recursive feature elimination to significantly improve prediction accuracy. Compared to state-of-the-art models, KINETIQA achieves up to 25% lower MAPE and maintains inference latency under 23 ms on an RTX 4090 GPU. With its strong performance under noisy sensor conditions and across multiple forecast horizons, KINETIQA demonstrates clinical-grade robustness and interpretability, paving the way for practical deployment in real-world gait rehabilitation and biomechanical monitoring scenarios.
+            We present <strong>KINETIQA</strong>, a Transformer-based model tailored for real-time knee joint angle prediction in exoskeleton-assisted rehabilitation. It integrates temporal convolutions, recursive feature elimination, and quality-driven attention to enhance long-horizon gait forecasting while maintaining computational efficiency. KINETIQA significantly outperforms baselines like Transformer, TempoNet, LSTM, and FocalGatedNet, achieving over 20% MAPE reduction and demonstrating resilience to various sensor noise types including Gaussian, uniform, and salt-and-pepper noise. Inference latency remains under 25ms on RTX 4090 hardware, making it suitable for closed-loop biomechanical control in real-world settings.
           </p>
         </div>
       </div>
@@ -85,29 +111,54 @@
   </div>
 </section>
 
+<!-- Image carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item">
+          <img src="static/images/KINETIQA.png" alt="KINETIQA Architecture"/>
+          <h2 class="subtitle has-text-centered">KINETIQA Model Architecture Overview</h2>
+        </div>
+        <div class="item">
+          <img src="static/images/FeatureSelectionPlot.png" alt="Feature Selection Performance"/>
+          <h2 class="subtitle has-text-centered">Feature Selection via Random Forest + RFECV</h2>
+        </div>
+        <div class="item">
+          <img src="static/images/ImprovementKINETIQA.png" alt="MAE Improvements"/>
+          <h2 class="subtitle has-text-centered">Relative Improvement in MAE Over Baselines</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- BibTeX -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{saoud2025kinetiqa,
   title={KINETIQA: Kinematic Integration Network with Enhanced Temporal Intelligence and Quality-driven Attention for Precise Joint Angle Prediction in Exoskeleton-based Gait Analysis},
-  author={Saad Saoud, Lyes and Irfan, Muhammad},
+  author={Saad Saoud, Lyes and Hussain, Irfan},
   journal={IEEE Access},
-  year={2025}
+  year={2025},
+  note={In Press}
 }</code></pre>
   </div>
 </section>
 
+<!-- Footer -->
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
           <p>
-            This page was built using a modified version of the
+            This page was built using a modified version of the 
             <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>,
-            extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. You may reuse this template with credit.
-            <br>This website is licensed under a
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+            extended by <a href="https://github.com/vinthony" target="_blank">Vinthony</a>. Please feel free to reuse and adapt with attribution.
+            <br>This website is licensed under 
+            <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons BY-SA 4.0</a>.
           </p>
         </div>
       </div>
